--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "node": ">=0.12.0"
   },
   "scripts": {
-    "pretest": "jshint lib",
+    "pretest": "eslint lib && eslint test",
     "test": "mocha --recursive -R spec"
   },
   "files": [
@@ -28,15 +28,20 @@
     "jummy": "^0.1.0",
     "lodash": "^3.10.1",
     "mkdirp": "^0.5.1",
+    "nectar": "^0.3.0",
     "nedb": "^1.5.0",
     "pify": "^2.3.0",
     "pinkie-promise": "^2.0.0",
-    "sprintf-js": "^1.0.3"
+    "slugs": "^0.1.3",
+    "sprintf-js": "^1.0.3",
+    "tar": "^2.2.1"
   },
   "devDependencies": {
     "chai": "^3.4.1",
     "chai-as-promised": "^5.1.0",
     "coveralls": "^2.11.6",
+    "del": "^2.2.0",
+    "eslint": "^1.10.3",
     "istanbul": "^0.4.1",
     "jshint": "^2.8.0",
     "mocha": "^2.3.4",
