--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "jummy": "^0.2.0",
     "lodash": "^3.10.1",
     "mkdirp": "^0.5.1",
-    "nectar": "^0.3.2",
+    "nectar": "^0.3.4",
     "nedb": "^1.5.0",
     "pify": "^2.3.0",
     "pinkie-promise": "^2.0.0",
@@ -45,7 +45,7 @@
     "del": "^2.2.0",
     "eslint": "^1.10.3",
     "istanbul": "^0.4.1",
-    "jshint": "^2.8.0",
+    "jshint": "^2.9.1-rc1",
     "mocha": "^2.3.4",
     "mock-fs": "^3.5.0",
     "sinon": "^1.17.2",
