--- a/package.json
+++ b/package.json
@@ -37,13 +37,13 @@
     "pinkie-promise": "^2.0.0",
     "slugs": "^0.1.3",
     "sprintf-js": "^1.0.3",
-    "tar": "^2.2.1"
+    "tar": "^2.2.1",
+    "del": "^2.2.0"
   },
   "devDependencies": {
     "chai": "^3.4.1",
     "chai-as-promised": "^5.2.0",
     "coveralls": "^2.11.6",
-    "del": "^2.2.0",
     "eslint": "^1.10.3",
     "istanbul": "^0.4.1",
     "jshint": "^2.9.1-rc1",
