--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,5 @@ before_script:
   - npm run-script pretest
 script:
   - istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- --recursive
+after_script:
   - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
