--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "performance"
   ],
   "dependencies": {
+    "del": "^2.2.0",
     "fs-extra": "^0.26.3",
     "gunzip-maybe": "^1.2.1",
     "jummy": "^0.2.0",
@@ -35,10 +36,10 @@
     "nedb": "^1.5.0",
     "pify": "^2.3.0",
     "pinkie-promise": "^2.0.0",
+    "promise-retry": "^0.2.9",
     "slugs": "^0.1.3",
     "sprintf-js": "^1.0.3",
-    "tar": "^2.2.1",
-    "del": "^2.2.0"
+    "tar": "^2.2.1"
   },
   "devDependencies": {
     "chai": "^3.4.1",
