--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "promise-retry": "^1.0.1",
     "slugs": "^0.1.3",
     "sprintf-js": "^1.0.3",
-    "tar": "^2.2.1"
+    "tar-fs": "^1.9.0"
   },
   "devDependencies": {
     "chai": "^3.4.1",
