--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,7 @@
 {
-  "rules":   {
-    "indent":          [
-      2,
-      4
-    ],
-    "quotes":          [
+  "rules": {
+    "indent": 0,
+    "quotes": [
       2,
       "single"
     ],
@@ -12,14 +9,14 @@
       2,
       "unix"
     ],
-    "semi":            [
+    "semi": [
       2,
       "always"
     ]
   },
-  "env":     {
-    "es6":   true,
-    "node":  true,
+  "env": {
+    "es6": true,
+    "node": true,
     "mocha": true
   },
   "extends": "eslint:recommended"
