--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   ],
   "dependencies": {
     "del": "^2.2.0",
+    "extrakt": "0.0.1",
     "fs-extra": "^0.26.3",
     "gunzip-maybe": "^1.2.1",
+    "hasha": "^2.2.0",
     "jummy": "^0.3.0",
     "lodash": "^3.10.1",
     "mkdirp": "^0.5.1",
@@ -40,7 +42,6 @@
     "promise-retry": "^1.0.1",
     "slugs": "^0.1.3",
     "sprintf-js": "^1.0.3",
-    "hasha": "^2.2.0",
     "tar-fs": "^1.9.0"
   },
   "devDependencies": {
