--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "del": "^2.2.0",
     "extrakt": "0.0.1",
     "fs-extra": "^0.26.3",
-    "gunzip-maybe": "^1.2.1",
     "hasha": "^2.2.0",
     "jummy": "^0.3.0",
     "lodash": "^3.10.1",
@@ -41,8 +40,7 @@
     "pinkie-promise": "^2.0.0",
     "promise-retry": "^1.0.1",
     "slugs": "^0.1.3",
-    "sprintf-js": "^1.0.3",
-    "tar-fs": "^1.9.0"
+    "sprintf-js": "^1.0.3"
   },
   "devDependencies": {
     "chai": "^3.4.1",
