--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "extrakt": "0.0.7",
     "fs-extra": "^0.26.4",
     "hasha": "^2.2.0",
-    "jummy": "^0.3.0",
-    "lodash": "^3.10.1",
+    "jummy": "^0.3.1",
+    "lodash": "^4.0.0",
     "mkdirp": "^0.5.1",
-    "nectar": "^0.8.0",
-    "nedb": "^1.5.1",
+    "nectar": "^0.8.1",
+    "nedb": "^1.6.2",
     "path-exists": "^2.1.0",
     "pify": "^2.3.0",
     "pinkie-promise": "^2.0.0",
@@ -47,8 +47,8 @@
     "chai-as-promised": "^5.2.0",
     "coveralls": "^2.11.6",
     "eslint": "^1.10.3",
-    "istanbul": "^0.4.1",
-    "jshint": "^2.9.1-rc2",
+    "istanbul": "^0.4.2",
+    "jshint": "^2.9.1",
     "mocha": "^2.3.4",
     "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0"
