--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "performance"
   ],
   "dependencies": {
+    "bluebird": "^3.3.4",
+    "defa": "^0.1.0",
     "del": "^2.2.0",
     "extrakt": "0.1.1",
+    "filesize-parser": "^1.3.1",
     "fs-extra": "^0.26.7",
     "hasha": "^2.2.0",
     "jummy": "^0.3.1",
