--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ before_script:
   - npm install -g istanbul
   - npm run-script pretest
 script:
-  - istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly --
+  - istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- --recursive
 after_script:
   - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
