--- a/package.json
+++ b/package.json
@@ -38,13 +38,14 @@
     "lodash": "^4.6.1",
     "mkdirp": "^0.5.1",
     "nectar": "^0.8.3",
-    "nedb": "^1.8.0",
     "path-exists": "^2.1.0",
     "pify": "^2.3.0",
     "pinkie-promise": "^2.0.0",
     "promise-retry": "^1.1.0",
+    "sequelize": "^3.21.0",
     "slugs": "^0.1.3",
-    "sprintf-js": "^1.0.3"
+    "sprintf-js": "^1.0.3",
+    "sqlite3": "^3.1.3"
   },
   "devDependencies": {
     "chai": "^3.5.0",
