--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "johnnycache",
   "version": "1.5.0",
-  "description": "Cache file operations",
+  "description": "Super simple file operation cache",
   "main": "lib/Cache.js",
   "license": "MIT",
   "repository": "jmversteeg/johnnycache",
@@ -28,21 +28,21 @@
   ],
   "dependencies": {
     "bluebird": "^3.4.1",
-    "defa": "^0.1.0",
-    "del": "^2.2.1",
+    "defa": "^1.0.0",
+    "del": "^2.2.2",
     "extrakt": "0.1.1",
     "filesize-parser": "^1.4.1",
     "fs-extra": "^0.30.0",
     "hasha": "^2.2.0",
     "jummy": "^0.4.0",
-    "lodash": "^4.13.1",
+    "lodash": "^4.15.0",
     "mkdirp": "^0.5.1",
-    "nectar": "^1.0.1",
+    "nectar": "^3.0.0",
     "path-exists": "^3.0.0",
     "pify": "^2.3.0",
     "pinkie-promise": "^2.0.1",
     "promise-retry": "^1.1.0",
-    "sequelize": "^3.23.4",
+    "sequelize": "^3.24.1",
     "slugs": "^0.1.3",
     "sprintf-js": "^1.0.3",
     "sqlite3": "^3.1.4"
@@ -50,14 +50,14 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
-    "coveralls": "^2.11.9",
-    "eslint": "^3.0.0",
+    "coveralls": "^2.11.12",
+    "eslint": "^3.3.1",
     "istanbul": "^0.4.4",
     "jshint": "^2.9.2",
-    "mocha": "^2.5.3",
+    "mocha": "^3.0.2",
     "opn-cli": "^3.1.0",
-    "sinon": "^1.17.4",
-    "sinon-as-promised": "^4.0.0",
+    "sinon": "^1.17.5",
+    "sinon-as-promised": "^4.0.2",
     "sinon-chai": "^2.8.0"
   }
 }
