--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "node": ">=0.12.0"
   },
   "scripts": {
-    "pretest": "eslint lib && eslint test",
+    "pretest": "eslint lib",
     "test": "mocha -R spec --recursive",
     "test-coverage": "istanbul cover ./node_modules/mocha/bin/_mocha -- --recursive && opn coverage/lcov-report/index.html"
   },
@@ -27,7 +27,7 @@
     "performance"
   ],
   "dependencies": {
-    "bluebird": "^3.4.6",
+    "bluebird": "^3.4.7",
     "defa": "^1.0.0",
     "del": "^2.2.2",
     "extrakt": "0.1.2",
@@ -35,14 +35,14 @@
     "fs-extra": "^1.0.0",
     "hasha": "^2.2.0",
     "jummy": "^0.4.1",
-    "lodash": "^4.16.1",
+    "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
     "nectar": "^5.0.0",
     "path-exists": "^3.0.0",
     "pify": "^2.3.0",
     "pinkie-promise": "^2.0.1",
     "promise-retry": "^1.1.1",
-    "sequelize": "^3.24.3",
+    "sequelize": "^3.29.0",
     "slugs": "^0.1.3",
     "sprintf-js": "^1.0.3",
     "sqlite3": "^3.1.4"
@@ -51,12 +51,12 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "coveralls": "^2.11.14",
-    "eslint": "^3.6.0",
+    "eslint": "^3.13.0",
     "istanbul": "^0.4.5",
     "jshint": "^2.9.3",
-    "mocha": "^3.0.2",
+    "mocha": "^3.2.0",
     "opn-cli": "^3.1.0",
-    "sinon": "^1.17.6",
+    "sinon": "^1.17.7",
     "sinon-as-promised": "^4.0.2",
     "sinon-chai": "^2.8.0"
   }
