--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "sequelize": "^3.30.4",
     "slugs": "^0.1.3",
     "sprintf-js": "^1.0.3",
-    "sqlite3": "^3.1.4"
+    "sqlite3": "^3.1.4",
+    "stream-counter": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
