update deps and fix tests for compliance with new API

--- a/package.json
+++ b/package.json
@@ -29,35 +29,35 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "defa": "^1.0.0",
-    "del": "^2.2.2",
-    "extrakt": "0.1.2",
+    "del": "^3.0.0",
+    "extrakt": "^1.0.1",
     "filesize-parser": "^1.4.1",
-    "fs-extra": "^2.1.2",
-    "hasha": "^2.2.0",
+    "fs-extra": "^4.0.0",
+    "hasha": "^3.0.0",
     "jummy": "^0.4.1",
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
-    "nectar": "^5.0.0",
+    "nectar": "^5.0.1",
     "path-exists": "^3.0.0",
-    "pify": "^2.3.0",
+    "pify": "^3.0.0",
     "pinkie-promise": "^2.0.1",
     "promise-retry": "^1.1.1",
-    "sequelize": "^3.30.4",
+    "sequelize": "^4.4.2",
     "slugs": "^0.1.3",
-    "sprintf-js": "^1.0.3",
+    "sprintf-js": "^1.1.1",
     "sqlite3": "^3.1.4",
     "stream-counter": "^1.0.0"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "chai-as-promised": "^6.0.0",
-    "coveralls": "^2.13.0",
-    "eslint": "^3.19.0",
+    "chai": "^4.1.0",
+    "chai-as-promised": "^7.1.1",
+    "coveralls": "^2.13.1",
+    "eslint": "^4.3.0",
     "istanbul": "^0.4.5",
-    "jshint": "^2.9.3",
-    "mocha": "^3.2.0",
+    "jshint": "^2.9.5",
+    "mocha": "^3.4.2",
     "opn-cli": "^3.1.0",
-    "sinon": "^2.1.0",
-    "sinon-chai": "^2.9.0"
+    "sinon": "^2.3.8",
+    "sinon-chai": "^2.12.0"
   }
 }
