--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "hasha": "^3.0.0",
     "jummy": "^0.4.1",
     "lodash": "^4.17.4",
+    "lodash-id": "^0.14.0",
     "lowdb": "^0.16.2",
     "mkdirp": "^0.5.1",
     "nectar": "^5.0.1",
