--- a/package.json
+++ b/package.json
@@ -39,16 +39,14 @@
     "lodash": "^4.17.4",
     "lodash-id": "^0.14.0",
     "lowdb": "^0.16.2",
-    "mkdirp": "^0.5.1",
+    "make-dir": "^1.0.0",
     "nectar": "^5.0.1",
     "path-exists": "^3.0.0",
     "pify": "^3.0.0",
     "pinkie-promise": "^2.0.1",
     "promise-retry": "^1.1.1",
-    "sequelize": "^4.4.2",
     "slugs": "^0.1.3",
     "sprintf-js": "^1.1.1",
-    "sqlite3": "^3.1.4",
     "stream-counter": "^1.0.0"
   },
   "devDependencies": {
