--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "lowdb": "^0.16.2",
     "make-dir": "^1.0.0",
     "nectar": "^5.0.1",
+    "p-try": "^1.0.0",
     "path-exists": "^3.0.0",
     "pify": "^3.0.0",
-    "pinkie-promise": "^2.0.1",
     "promise-retry": "^1.1.1",
     "slugs": "^0.1.3",
     "sprintf-js": "^1.1.1",
