--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "johnnycache",
-  "version": "2.4.1",
+  "version": "3.0.0-0",
   "description": "Super simple file operation cache",
   "main": "lib/Cache.js",
   "license": "MIT",
