--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "chai-as-promised": "^7.1.1",
     "coveralls": "^2.13.1",
     "eslint": "^4.3.0",
-    "istanbul": "^0.4.5",
+    "istanbul": "next",
     "mocha": "^3.4.2",
     "opn-cli": "^3.1.0",
     "sinon": "^2.3.8",
