--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "johnnycache",
-  "version": "3.0.0-8",
+  "version": "3.0.0",
   "description": "Super simple file operation cache",
   "main": "index.js",
   "license": "MIT",
