add deep file caching test

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "chai-as-promised": "^7.1.1",
     "coveralls": "^3.0.6",
     "eslint": "^6.3.0",
+    "globby": "^10.0.1",
     "istanbul": "next",
     "mocha": "^6.2.0",
     "opn-cli": "^5.0.0",
