update nectar to nectar@next

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "lodash-id": "^0.14.0",
     "lowdb": "^1.0.0",
     "make-dir": "^3.0.0",
-    "nectar": "^5.0.6",
+    "nectar": "^6.0.0-0",
     "p-try": "^2.2.0",
     "path-exists": "^4.0.0",
     "pify": "^4.0.1",
